<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Network Speed Indicator for Oneplus</string>
	<string name="app_description">Displays network speeds on the status bar</string>
	<string name="pref_category_ind_settings">Indicator settings</string>
	<string name="pref_category_ind_appearance">Indicator appearance</string>
	<string name="pref_category_unit_settings">Unit settings</string>
	<string name="pref_category_text_appearance">Text appearance</string>
	<string name="pref_category_help">Help</string>
	<string name="pref_unit_mode">Unit mode</string>
	<string name="pref_unit">Unit</string>
	<string name="pref_unit_format">Display and format</string>
	<string name="pref_hide_below">Display threshold</string>
	<string name="dmsg_hide_below">Speeds less than this value will not be shown. Enter 0 to always show speed or 1 to hide when speed is zero.</string>
	<string name="hint_hide_below">bytes per sec</string>
	<string name="sum0_hide_below">Always show speeds</string>
	<string name="sum1_hide_below">Hide when speed is zero</string>
	<string name="unit_hide_below">Hide speeds below %s B/s</string> <!-- see note -->
	<string name="pref_show_suffix">Always show suffix</string>
	<string name="pref_networktype">Network types</string>
	<string name="pref_networkspeed">Network speeds</string>
	<string name="pref_font_size">Font size</string>
	<string name="hint_font_size">scaled pixels</string>
	<string name="unit_font_size">%s sp</string> <!-- see note -->
	<string name="pref_position">Position</string>
	<string name="pref_suffix">Suffix</string>
	<string name="pref_display">Display</string>
	<string name="pref_swap_speeds">Swap speed positions</string>
	<string name="pref_update_interval">Update interval</string>
	<string name="hint_update_interval">milliseconds</string>
	<string name="unit_update_interval">%s ms</string> <!-- see note -->
	<string name="pref_font_color">Font color</string>
	<string name="unit_font_color" translatable="false">%s (ARGB)</string> <!-- see note -->
	<string name="pref_font_style">Font style</string>
	<string name="pref_enable_logging">Enable logging</string>
	<string name="pref_report_issue">Report an issue</string>
	<string name="note_clear_data" translatable="false">Note: Try \"Clear data\" first.</string> <!-- ensure " is escaped correctly as \" -->
	<string name="pref_discuss_oneplus" translatable="false">Discuss on Oneplus BBS</string>
	<string name="unit_format_hidden">Hidden</string>
	<string name="unit_format_fmt_as">Formatted as</string>
	<string name="summary_none">None</string>
	<string name="item_auto">Auto</string>
	<!--
		 Note about units:
		 The placeholder %s will be replaced with the actual numeric value.
		 If it is omitted, the provided unit will be appended
		 at the end of numeric value (for example: 500 ms)
	-->


	<!-- Color Picker -->
	<string name="dialog_color_picker">Pick a color</string>
	<string name="press_color_to_apply">Tap on a color to apply</string>

	<string-array name="unit_mode_entries">
		<item>Binary bits</item>
		<item>Binary bytes</item>
		<item>Decimal bits</item>
		<item>Decimal bytes</item>
	</string-array>
	<string-array name="unit_format_entries">
		<item>Space prefix</item>
		<item>Factor (K,M)</item>
		<item>Binary mode (i)</item>
		<item>Bytes or bits</item>
		<item>Per (p,/)</item> <!-- can be translated as "Every (p,/)" -->
		<item>Second (s)</item>
	</string-array>
	<string-array name="networktype_entries">
		<item>Mobile</item>
		<item>Wi-Fi</item>
		<item>WiMAX</item>
		<item>Bluetooth</item>
		<item>Ethernet</item>
		<item>Wi-Fi Direct</item>
	</string-array>
	<string-array name="networkspeed_entries">
		<item>Upload</item>
		<item>Download</item>
	</string-array>
	<string-array name="position_entries">
		<item>Left</item>
		<item>Right</item>
	</string-array>
	<string-array name="suffix_entries">
		<item>None</item>
		<item>Solid triangle ▲ ▼</item>
		<item>Hollow triangle △ ▽</item>
		<item>Small solid triangle ▴ ▾</item>
		<item>Small hollow triangle ▵ ▿</item>
		<item>Arrow ↑ ↓</item>
		<item>Arrow hollow ⇧ ⇩</item>
	</string-array>
	<string-array name="display_entries">
		<item>Two lines</item>
		<item>One line</item>
	</string-array>
	<string-array name="font_style_entries">
		<item>Bold</item>
		<item>Italic</item>
	</string-array>
	<string name="pref_hide_launcher_icon_title">Hide launcher icon</string>
	<string name="pref_hide_launcher_icon_summary">May require launcher restart</string>
	<string name="pref_min_unit_title">Minimum unit</string>
	<string name="pref_min_unit_summary">For example, when setting "KB/s" and the speed is lower than 1KB/s, it will display as 0KB/s</string>
	<string name="others">Others</string>
	<string name="pref_get_speed_way">Way of getting network speed</string>
	<string-array name="speed_way_entries">
		<item>@string/speed_way_default</item>
		<item>@string/speed_way_gravity_box</item>
	</string-array>
	<string name="speed_way_default">Default way</string>
	<string name="speed_way_gravity_box">GravityBox way</string>
    <string name="min_width">Minimum width</string>
	<string name="min_width_summary">Set a minimum width for TextView would fix some measure bugs</string>
    <string name="unit_pixel">Unit: px</string>
	<string name="min_width_dialog_message">default minimun width is 0px, and it wouldn\'t do anything on the view</string>
	<string name="min_width_px_summary">Minimun width is %s px</string>

</resources>